k8s/overlays/prod/patch-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcoding-worker
spec:
  template:
    spec:
      containers:
        - name: transcoding-worker
          resources:
            limits:
              cpu: "12"
              ephemeral-storage: 9Gi
              memory: 16Gi
            requests:
              cpu: "6"
              ephemeral-storage: 9Gi
              memory: 12Gi
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
          command: ["/cloud-sql-proxy"]
          args:
            [
              "--address",
              "0.0.0.0",
              "--port",
              "5432",
              "$(CLOUD_SQL_CONNECTION_NAME)",
            ]
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
